src/objects/CO_Salesperson__c.object
<CustomObject>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>CO Salespersons</relationshipLabel>
        <relationshipName>CO_Salespersons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>CO Salespersons</relationshipLabel>
        <relationshipName>CO_Salespersons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>CO Salespersons</relationshipLabel>
        <relationshipName>CO_Salespersons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Salespersons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>CO Salespersons</relationshipLabel>
        <relationshipName>CO_Salespersons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <label>Technician</label>
        <referenceTo>Technician__c</referenceTo>
        <relationshipName>Salespersons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>CO Salesperson</label>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>Salesperson Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Salespersons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>